# civic-arena

./: .gitignore  CLAUDE.md  CONCEPT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  new_topic.yml
assets/: demo.cast
src/civicarena/: __init__.py  __main__.py  cli.py  export.py  judge.py  llm.py  orchestrator.py  personas.py  protocol.py  types.py  worldview.py
src/civicarena/cache/: __init__.py  ai_art_copyright_sf.json  plastic_bags_london.json  public_transit_nyc.json  remote_work_berlin.json  speech_codes_oxford.json
src/civicarena/search/: __init__.py  base.py  ddg.py  google.py  searxng.py
tests/: conftest.py  test_judge.py  test_llm.py  test_protocol.py  test_search.py  test_types.py  test_worldview.py
